# internal/infrastructure/rabbit/entities/organization.go
@@ -5,6 +5,7 @@ type Organization struct {
 	Name        string `json:"name"`
 	DisplayName string `json:"displayName"`
 	Description string `json:"description"`
+	UTCOffset   int32  `json:"utcOffset"`
 	IsDefault   bool   `json:"isDefault"`
 	Deleted     bool   `json:"deleted"`
 	Version     int    `json:"version"`
