# openapi/admin/models/server_group_update.go
@@ -10,8 +10,10 @@ import (
 	"context"
 	"encoding/json"
 
+	"github.com/go-openapi/errors"
 	"github.com/go-openapi/strfmt"
 	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
 )
 
 // ServerGroupUpdate server group update
@@ -24,6 +26,11 @@ type ServerGroupUpdate struct {
 
 	// name
 	Name *string `json:"name,omitempty"`
+
+	// utc offset
+	// Maximum: 840
+	// Minimum: -720
+	UtcOffset *int32 `json:"utcOffset,omitempty"`
 }
 
 // UnmarshalJSON unmarshals this object while disallowing additional properties from JSON
@@ -35,6 +42,11 @@ func (m *ServerGroupUpdate) UnmarshalJSON(data []byte) error {
 
 		// name
 		Name *string `json:"name,omitempty"`
+
+		// utc offset
+		// Maximum: 840
+		// Minimum: -720
+		UtcOffset *int32 `json:"utcOffset,omitempty"`
 	}
 
 	dec := json.NewDecoder(bytes.NewReader(data))
@@ -45,11 +57,37 @@ func (m *ServerGroupUpdate) UnmarshalJSON(data []byte) error {
 
 	m.Description = props.Description
 	m.Name = props.Name
+	m.UtcOffset = props.UtcOffset
 	return nil
 }
 
 // Validate validates this server group update
 func (m *ServerGroupUpdate) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateUtcOffset(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *ServerGroupUpdate) validateUtcOffset(formats strfmt.Registry) error {
+	if swag.IsZero(m.UtcOffset) { // not required
+		return nil
+	}
+
+	if err := validate.MinimumInt("utcOffset", "body", int64(*m.UtcOffset), -720, false); err != nil {
+		return err
+	}
+
+	if err := validate.MaximumInt("utcOffset", "body", int64(*m.UtcOffset), 840, false); err != nil {
+		return err
+	}
+
 	return nil
 }
 
